--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <meta name="author" content="Sarthak Jain">
       <meta name="email" content="sarthak240498@gmail.com">
       <meta name="copyright" content="Sarthak Jain 2021" />
+      <meta content="width=device-width, initial-scale=1" name="viewport" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Wedding Invitation | 14th Feb |  Mishtten Resort, Rajasthan" />
       <meta property="og:description"
