--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <a href="./assets/SI.pdf" href="{{.}}" target="_blank">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
+
+        <a href="https://www.paperlesspost.com/events/42022796-fa32f810/replies/628828561-574f1d08" href="{{.}}" target="_blank">
+         <div class="venue">OPEN ANIMATED INVITATION CARD</div>
+       </a>
       </div>
       <p class="footer">
          Can't wait to celebrate auspicious moment of our family with you! <br>
@@ -70,9 +74,11 @@
          </a>
       
        </div>
-       <br> 
+       <br>   
 
+       <div class="video-container">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/lXbrJhRNbqM?autoplay=1&mute=1&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
 
 
