--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="wrap">
          <div class="title">
             <h1>Saharsh </h1>
-            <h2>❤️</h2>
+            <h2>❤️Weds❤️</h2>
             <h1>Isha</h1>
             <h3>Are getting married</h3>
             <p>
@@ -86,7 +86,7 @@
 
 
 
-      <div class="contain">
+      <!-- <div class="contain">
 
          <h1>Image Carousel</h1>
      
@@ -124,7 +124,7 @@
                    3
                  </div>
                </div>
-             </div>
+             </div> -->
        
              <!-- <div class="tile">
                <div class="tile__media">
