--- a/index.html
+++ b/index.html
@@ -35,13 +35,88 @@
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
-            <h1>Saharsh </h1>
-            <h2>❤️Weds❤️</h2>
-            <h1>Isha</h1>
+            <h1>SAHARSH</h1>
+            <h2>❤️AND❤️</h2>
+            <h1>ISHA</h1>
             <h3>Are getting married</h3>
             <p>
                on <span class="date">14 February 2021</span></29>, At <span class="place">Mishtten Resort</span> Jhalawar, Rajasthan              
             </p>
+
+            <div class="body2">
+            <svg width="50" height="50" viewBox="0 0 200 200">
+               <g transform="translate(100 100)">
+                 <path transform="translate(-50 -50)" fill="tomato" d="M92.71,7.27L92.71,7.27c-9.71-9.69-25.46-9.69-35.18,0L50,14.79l-7.54-7.52C32.75-2.42,17-2.42,7.29,7.27v0 c-9.71,9.69-9.71,25.41,0,35.1L50,85l42.71-42.63C102.43,32.68,102.43,16.96,92.71,7.27z"></path>
+                 <animateTransform 
+                     attributeName="transform" 
+                     type="scale" 
+                     values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
+                     dur="1s" 
+                     repeatCount="indefinite"
+                     additive="sum">      
+                 </animateTransform>
+             </g>
+           </svg>
+
+           <svg width="50" height="50" viewBox="0 0 200 200">
+            <g transform="translate(100 100)">
+              <path transform="translate(-50 -50)" fill="tomato" d="M92.71,7.27L92.71,7.27c-9.71-9.69-25.46-9.69-35.18,0L50,14.79l-7.54-7.52C32.75-2.42,17-2.42,7.29,7.27v0 c-9.71,9.69-9.71,25.41,0,35.1L50,85l42.71-42.63C102.43,32.68,102.43,16.96,92.71,7.27z"></path>
+              <animateTransform 
+                  attributeName="transform" 
+                  type="scale" 
+                  values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
+                  dur="1s" 
+                  repeatCount="indefinite"
+                  additive="sum">      
+              </animateTransform>
+          </g>
+        </svg>
+
+        <svg width="50" height="50" viewBox="0 0 200 200">
+         <g transform="translate(100 100)">
+           <path transform="translate(-50 -50)" fill="tomato" d="M92.71,7.27L92.71,7.27c-9.71-9.69-25.46-9.69-35.18,0L50,14.79l-7.54-7.52C32.75-2.42,17-2.42,7.29,7.27v0 c-9.71,9.69-9.71,25.41,0,35.1L50,85l42.71-42.63C102.43,32.68,102.43,16.96,92.71,7.27z"></path>
+           <animateTransform 
+               attributeName="transform" 
+               type="scale" 
+               values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
+               dur="1s" 
+               repeatCount="indefinite"
+               additive="sum">      
+           </animateTransform>
+       </g>
+     </svg>
+
+     <svg width="50" height="50" viewBox="0 0 200 200">
+      <g transform="translate(100 100)">
+        <path transform="translate(-50 -50)" fill="tomato" d="M92.71,7.27L92.71,7.27c-9.71-9.69-25.46-9.69-35.18,0L50,14.79l-7.54-7.52C32.75-2.42,17-2.42,7.29,7.27v0 c-9.71,9.69-9.71,25.41,0,35.1L50,85l42.71-42.63C102.43,32.68,102.43,16.96,92.71,7.27z"></path>
+        <animateTransform 
+            attributeName="transform" 
+            type="scale" 
+            values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
+            dur="1s" 
+            repeatCount="indefinite"
+            additive="sum">      
+        </animateTransform>
+    </g>
+  </svg>
+
+  <svg width="50" height="50" viewBox="0 0 200 200">
+   <g transform="translate(100 100)">
+     <path transform="translate(-50 -50)" fill="tomato" d="M92.71,7.27L92.71,7.27c-9.71-9.69-25.46-9.69-35.18,0L50,14.79l-7.54-7.52C32.75-2.42,17-2.42,7.29,7.27v0 c-9.71,9.69-9.71,25.41,0,35.1L50,85l42.71-42.63C102.43,32.68,102.43,16.96,92.71,7.27z"></path>
+     <animateTransform 
+         attributeName="transform" 
+         type="scale" 
+         values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
+         dur="1s" 
+         repeatCount="indefinite"
+         additive="sum">      
+     </animateTransform>
+ </g>
+</svg>
+
+
+             </div>
+
          </div>
       </div>
       <div id="time"></div>
@@ -66,7 +141,7 @@
          <span></span>
       </p>
       <div class="music">
-         <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio> 
+         <audio src="./assets/mp3/song2.mp3" id="my_audio" loop="loop"></audio> 
         <!-- <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>  -->
       </div>
       
