--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
 
       <p class="happiness">Join us in our happiness!<br><a href="https://twitter.com/sarcastic_sark" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></p>
      
+      <div class="tile__img">
+         <img class="tile__img" src="./assets/img/asd (2).gif" alt=""  />
+       </div>
 
    
       <!-- partial -->
