--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
       <div class="tile__img">
          <img class="tile__img" src="./assets/img/asd (2).gif" alt=""  />
        </div>
+       <p>With the divine grace of the almighty,
+         I cordially invite you and your family to
+         my elder brother's wedding
+         
+         I'd eagerly await your kind presence in auspicious occasion of my family.
+         </p>
 
    
       <!-- partial -->
@@ -253,16 +259,8 @@
 /____/\__,_/ |___/\___/   \__/_/ /_/\___/  /_____/\__,_/\__/\___/                              
 -->
 
-<!--
 
-With the divine grace of the almighty,
-I cordially invite you and your family to
-my elder brother's wedding
 
-I'd eagerly await your kind presence in auspicious occasion of my family.
-
--->
-
-<!-- Built with love ❤️ by Sarthak Jain -->
+Built with love ❤️ by Sarthak Jain
 
 </html>
