--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
    <body>
       <!-- partial:index.partial.html -->
       <div class="sakura-falling"></div>
-      <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration" class="imgi">
-      <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"  class="imgi"> 
+      <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration">
+      <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration" > 
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
