--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration" > 
       <section id="media"></section>
       <div class="wrap">
+        
          <div class="title">
+          <p><b>।।श्री महावीराय नमः।। </b></p>
             <h1>SAHARSH</h1>
             <h2>❤️AND❤️</h2>
             <h1>ISHA</h1>
@@ -178,17 +180,18 @@
                <section id="section1">
                  <!-- <a href="#section3" class="arrow__btn">‹</a> -->
                  <div class="item">
-                  <img src="./assets/img/asd (1).gif" alt="Describe Image">
+                  <img src="./assets/img/jkl.gif" alt="Describe Image">
                 </div>
                  <div class="item">
                  <img src="./assets/img/Invitation (1).png" alt="Describe Image">
                </div>
+               <div class="item">
+                <img src="./assets/img/cvb.gif" alt="Describe Image">
+              </div>
                  <div class="item">
                  <img src="./assets/img/Invitation (2).png" alt="Describe Image">
                </div>
-                 <div class="item">
-                 <img src="./assets/img/Invitation (3).png" alt="Describe Image">
-               </div>                 
+                            
                  <div class="item">
                  <img src="./assets/img/bvc.gif" alt="Describe Image">
                </div>
