--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
       <meta name="description"
          content="With the divine grace of the almighty, inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards.">
       <meta name="author" content="Sarthak Jain">
-      <meta name="email" content="sarthak240498@gmail.com">
+      <meta name="email" content="sarthakj2498@gmail.com">
       <meta name="copyright" content="Sarthak Jain 2021" />
       <meta content="width=device-width, initial-scale=1" name="viewport" />
-      <meta property="og:type" content="website" />
+      <meta property="og:type" content="Wedding Website" />
       <meta property="og:title" content="Wedding Invitation | 14th Feb |  Mishtten Resort, Rajasthan" />
       <meta property="og:description"
-         content="With the divine grace of the almighty, inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards." />
-      <meta property="og:image" content="https://www.sarthakj.me/" />
+         content="Inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards." />
+      <meta property="og:image" content="https://drive.google.com/file/d/11r8uDDtON1t2dRUL1OwRrv0t5xaOrHR0/view" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 14th Feb | Saharsh & Isha" />
 
-      <title>Wedding Invitation | Feb 14 | Mishtten Resort, Rajasthan </title>
+      <title>Wedding Invitation | SaharshIsha</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -139,8 +139,10 @@
       </div>
       <p class="footer">
          Can't wait to celebrate auspicious moment of our family with you! <br>
-         Just a ping away for any queries: +91 7011189445
-         <span></span>
+         Ping me for queries: +91 9013239430
+         <span> <a href="https://api.whatsapp.com/send?phone=919013239430&utm_source=Messaging&utm_medium=Whatsapp" target="_blank" class="social-icon" title="WhatsApp">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 -8 30 30" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>            
+        </a></span>
       </p>
       <div class="music">
          <audio src="./assets/mp3/song2.mp3" id="my_audio" loop="loop"></audio> 
