--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta property="og:title" content="Wedding Invitation | 14th Feb |  Mishtten Resort, Rajasthan" />
       <meta property="og:description"
          content="Inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards." />
-      <meta property="og:image" content="https://drive.google.com/file/d/11r8uDDtON1t2dRUL1OwRrv0t5xaOrHR0/view" />
+      <meta property="og:image" content="https://saharshisha.netlify.app/assets/abc.jpeg" />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Invitation | 14th Feb | Saharsh & Isha" />
 
@@ -253,7 +253,7 @@
       <p class="happiness">Join us in our happiness!<br><a href="https://twitter.com/sarcastic_sark" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></p>
      
       <div class="tile__img">
-         <img class="tile__img" src="./assets/img/asd (2).gif" alt=""  />
+         <img class="tile__img" src="./assets/img/ggg.gif" alt=""  />
        </div>
        <p class="footer">With the divine grace of the almighty,
          I cordially invite you and your family to
