--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </a></span>
       </p>
       <div class="music">
-         <audio src="./assets/mp3/song2.mp3" id="my_audio" loop="loop"></audio> 
+         <audio src="./assets/mp3/asd.mp3" id="my_audio" loop="loop"></audio> 
         <!-- <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>  -->
       </div>
       
@@ -301,6 +301,12 @@
  ___/ / /_/ /| |/ /  __/  / /_/ / / /  __/  / /_/ / /_/ / /_/  __/
 /____/\__,_/ |___/\___/   \__/_/ /_/\___/  /_____/\__,_/\__/\___/                              
 -->
+
+<div>
+  <blockquote>हल्दी है चंदन है रिश्तों का बंधन है ।
+  <br>पुरा परिवार सहित आपका हार्दिक अभिनंदन है ।।
+  </blockquote>
+</div>
 
 <div class="actions">
   <a href="#top" class="to-top">
