--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 </div>
 
 <div class="actions">
-  <a href="#top" class="to-top">
+  <a href="#top" onclick="pauseAudio()";>
     <div class="venue"><b>^ TOP ^</b></div>
   </a>
 </div>
