--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <meta name="email" content="sarthakj2498@gmail.com">
       <meta name="copyright" content="Sarthak Jain 2021" />
       <meta content="width=device-width, initial-scale=1" name="viewport" />
-      <meta property="og:type" content="Wedding Website" />
-      <meta property="og:title" content="Wedding Invitation | 14th Feb |  Mishtten Resort, Rajasthan" />
+      <meta property="og:type" content="Wedding Website" >
+      <meta property="og:title" content="Wedding Invitation | 14th Feb |  Mishtten Resort, Rajasthan" >
       <meta property="og:description"
          content="Inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards." />
-      <meta property="og:image" content="https://saharshisha.netlify.app/assets/abc.jpeg" />
-      <meta property="og:url" content="" />
-      <meta property="og:site_name" content="Wedding Invitation | 14th Feb | Saharsh & Isha" />
+      <meta property="og:image" content="https://saharshisha.netlify.app/assets/abc.jpeg" >
+      <meta property="og:url" content="https://saharshisha.netlify.app/" >
+      <meta property="og:site_name" content="Wedding Invitation | 14th Feb | Saharsh & Isha" >
 
       <title>Wedding Invitation | SaharshIsha</title>
 
