--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       <meta property="og:title" content="Wedding Invitation | 14th Feb |  Mishtten Resort, Rajasthan" >
       <meta property="og:description"
          content="Inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards." />
-      <meta property="og:image" content="https://saharshisha.netlify.app/assets/abc.jpeg" >
+      <meta property="og:image" content="https://raw.githubusercontent.com/sarthak-1998/WeddingEvite/master/assets/abc.jpeg" >
       <meta property="og:url" content="https://saharshisha.netlify.app/" >
       <meta property="og:site_name" content="Wedding Invitation | 14th Feb | Saharsh & Isha" >
+      <meta name="twitter:image" content="https://raw.githubusercontent.com/sarthak-1998/WeddingEvite/master/assets/abc.jpeg">
 
       <title>Wedding Invitation | SaharshIsha</title>
 
@@ -25,7 +26,6 @@
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       
-    
    </head>
    <body>
       <!-- partial:index.partial.html -->
