--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <meta property="og:description"
          content="Inviting you and your family to Saharsh's wedding to be held on 14th February at Mishtten Resort, Jhalawar, Rajasthan  from 3:00 PM onwards." />
       <meta property="og:image" content="https://raw.githubusercontent.com/sarthak-1998/WeddingEvite/master/assets/abc.jpeg" >
+      <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/sarthak-1998/WeddingEvite/master/assets/abc.jpeg" >
+
       <meta property="og:url" content="https://saharshisha.netlify.app/" >
       <meta property="og:site_name" content="Wedding Invitation | 14th Feb | Saharsh & Isha" >
       <meta name="twitter:image" content="https://raw.githubusercontent.com/sarthak-1998/WeddingEvite/master/assets/abc.jpeg">
