--- a/index.html
+++ b/index.html
@@ -126,7 +126,19 @@
 
          </div>
       </div>
+
+      <div class="actions">
+        
+        <a href="https://photos.app.goo.gl/Wn9PRK7FMpxBKF5s6" target="_blank">
+          <div class="venue">👩‍❤️‍👨 See The best Captured Moments 📷</div>
+        </a>
+     
+      </div>
+      <br>   
+
       <div id="time"></div>
+
+
       <p class="dance-med">
          dinner & dancing to follow
       </p>
