--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="actions">
         
         <a href="https://photos.app.goo.gl/Wn9PRK7FMpxBKF5s6" target="_blank">
-          <div class="venue">👩‍❤️‍👨 See The best Captured Moments 📷</div>
+          <div class="venue">👩‍❤️‍👨 See The Best Captured Moments 📷</div>
         </a>
      
       </div>
